[gd_scene load_steps=12 format=2]

[ext_resource path="res://gui/pressed_stylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://gui/default_stylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/hovered_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://gui/disabled_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/fonts/PixelMplus12-Regular.tres" type="DynamicFont" id=5]
[ext_resource path="res://gui/main/main.gd" type="Script" id=6]
[ext_resource path="res://gui/main/main.png" type="Texture" id=7]
[ext_resource path="res://gui/main/title.png" type="Texture" id=8]
[ext_resource path="res://gui/main/world_types.tres" type="ButtonGroup" id=9]
[ext_resource path="res://gui/main/world_settings.gd" type="Script" id=10]
[ext_resource path="res://gui/main/load_world.gd" type="Script" id=11]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1009.0
texture = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 16.0
margin_top = 69.0
margin_right = 1008.0
margin_bottom = 531.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 224.0
texture = ExtResource( 8 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 992.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 64 )

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 296.0
margin_right = 576.0
margin_bottom = 326.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "NEW GAME"

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 330.0
margin_right = 576.0
margin_bottom = 360.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "LOAD GAME"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 364.0
margin_right = 576.0
margin_bottom = 394.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Exit"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 398.0
margin_right = 992.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 64 )

[node name="WorldSettings" type="PopupDialog" parent="."]
margin_right = 336.0
margin_bottom = 190.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="WorldSettings"]
margin_right = 328.0
margin_bottom = 88.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="WorldSettings/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_right = 304.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "World settings"
align = 1

[node name="Control" type="Control" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 304.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 304.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "World name"

[node name="WorldName" type="LineEdit" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 240, 0 )
custom_fonts/font = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 304.0
margin_bottom = 72.0

[node name="Control" type="Control" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 14 )

[node name="Warning" type="Label" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 64.0
margin_right = 292.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.752941, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "This world name has been already used!"

[node name="Control2" type="Control" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 304.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer3" type="HBoxContainer" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 304.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "World type"

[node name="Normal" type="CheckBox" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 24.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
pressed = true
group = ExtResource( 9 )
text = "Normal"

[node name="Flat" type="CheckBox" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 132.0
margin_right = 184.0
margin_bottom = 24.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
disabled = true
group = ExtResource( 9 )
text = "Flat"

[node name="Control3" type="Control" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 304.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer4" type="HBoxContainer" parent="WorldSettings/MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 304.0
margin_bottom = 158.0
custom_constants/separation = 32
alignment = 1

[node name="Generate" type="Button" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 78.0
margin_right = 142.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
disabled = true
text = "Generate"

[node name="Cancel" type="Button" parent="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 174.0
margin_right = 226.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Cancel"

[node name="LoadWorld" type="PopupDialog" parent="."]
margin_right = 272.0
margin_bottom = 328.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="LoadWorld"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="LoadWorld/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 312.0
alignment = 1

[node name="Label" type="Label" parent="LoadWorld/MarginContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Load save data"
align = 1

[node name="Control" type="Control" parent="LoadWorld/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 240.0
margin_bottom = 18.0

[node name="ScrollContainer" type="ScrollContainer" parent="LoadWorld/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 240.0
margin_bottom = 262.0
rect_min_size = Vector2( 240, 240 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LoadWorld/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )

[node name="CenterContainer" type="CenterContainer" parent="LoadWorld/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Nothing" type="Label" parent="LoadWorld/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/CenterContainer"]
margin_left = 99.0
margin_top = 113.0
margin_right = 141.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Nothing"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LoadWorld/MarginContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 240.0
margin_bottom = 296.0
custom_constants/separation = 32
alignment = 1

[node name="Load" type="Button" parent="LoadWorld/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 98.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
disabled = true
text = "Load"

[node name="Cancel" type="Button" parent="LoadWorld/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 182.0
margin_bottom = 30.0
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Cancel"

[connection signal="resized" from="." to="." method="_on_Main_resized"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="text_changed" from="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer/WorldName" to="WorldSettings" method="_on_WorldName_text_changed"]
[connection signal="pressed" from="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer4/Generate" to="WorldSettings" method="_on_Generate_pressed"]
[connection signal="pressed" from="WorldSettings/MarginContainer/VBoxContainer/HBoxContainer4/Cancel" to="WorldSettings" method="_on_Cancel_pressed"]
[connection signal="savedata_selected" from="LoadWorld" to="LoadWorld" method="_on_LoadWorld_savedata_selected"]
[connection signal="pressed" from="LoadWorld/MarginContainer/VBoxContainer/HBoxContainer/Load" to="LoadWorld" method="_on_Load_pressed"]
[connection signal="pressed" from="LoadWorld/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="LoadWorld" method="_on_Cancel_pressed"]
